--- a/src/app/components/to-do-list-item/to-do-list-item.scss
+++ b/src/app/components/to-do-list-item/to-do-list-item.scss
@@ -1,12 +1,36 @@
+:host(.selected) .item {
+    background-color: rgba(46, 255, 255, 0.150);
+    border: 1px solid rgb(46, 255, 255);
+}
+
 .item {
-    height: 25px;
-    margin: 2px 0;
+    height: 30px;
+    margin: 5px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 5px;
+    padding: 0 5px;
+    border: 1px solid transparent;
+
+    &:hover {
+        background-color: rgba(46, 255, 255, 0.150);
+    }
+
+    &:active {
+        background-color: rgba(46, 255, 255, 0.350);
+        border: 1px solid rgb(46, 255, 255);
+    }
+
+    &-text {
+        width: calc(100% - 80px);
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
 }
 
 .button-delete {
     width: 80px;
-    height: 100%;
+    height: 25px;
 }
