--- a/src/app/components/to-do-list/to-do-list.html
+++ b/src/app/components/to-do-list/to-do-list.html
@@ -1,33 +1,54 @@
-<div class="container">
+<div class="container" [class.container-open]="selectedItemId !== null">
     <div class="header">
         <h1>Todo List</h1>
     </div>
     @if (isLoading) {
         <tui-loader [inheritColor]="true" />
     } @else {
-        <div class="body">
-            @if (list.length) {
-                <ul>
-                    @for (item of list; track $index) {
-                        <li>
-                            <to-do-list-item [item]="item" (deleteItemEvent)="deleteItem($event)" />
-                        </li>
+        <div class="list">
+            <div #bodyList [class.list-body]="selectedItemId !== null">
+                <div class="body">
+                    @if (list.length) {
+                        <ul>
+                            @for (item of list; track item.id) {
+                                <li>
+                                    <to-do-list-item [class.selected]="selectedItemId === $index" [item]="item" (deleteItemEvent)="deleteItem($event)" (selectItemEvent)="selectItem($event)" />
+                                </li>
+                            }
+                        </ul>
+                    } @else {
+                        <p>Здесь может быть ваш список дел!</p>
                     }
-                </ul>
-            } @else {
-                <p>Здесь может быть ваш список дел!</p>
-            }
-        </div>
-        <div class="footer">
-            <tui-textfield class="input" tuiTextfieldSize="m" [tuiTextfieldCleaner]="true">
-                <label tuiLabel>Новое дело:</label>
-                <input
-                    tuiTextfield
-                    placeholder="Введите новое дело..."
-                    [(ngModel)]="inputValue"
-                />
-            </tui-textfield>
-            <ui-button class="button button-add" [class.disabled]="!inputValue.length" title="Добавить" (outClickEmitter)="addItem(inputValue)" />
+                </div>
+                <div class="footer">
+                    <tui-textfield class="input" tuiTextfieldSize="m" [tuiTextfieldCleaner]="true">
+                        <label tuiLabel>Новое дело:</label>
+                        <input
+                            tuiTextfield
+                            placeholder="Введите новое дело..."
+                            [(ngModel)]="textValue"
+                        />
+                    </tui-textfield>
+                    <tui-expand [expanded]="!!textValue.length">
+                        <tui-textfield class="textarea" tuiTextfieldSize="m" [tuiTextfieldCleaner]="true">
+                            <label tuiLabel>Описание:</label>
+                            <textarea
+                                tuiTextarea
+                                placeholder="Введите описание нового дела..."
+                                [(ngModel)]="descriptionValue"
+                            ></textarea>
+                        </tui-textfield>
+                    </tui-expand>
+                    <ui-button tooltip tooltipText="Нажмите, чтобы добавить" tooltipPos="bottom" class="button button-add" [class.disabled]="!textValue.length" title="Добавить" (outClickEmitter)="addItem(textValue, descriptionValue)" />
+                </div>
+            </div>
+            <tui-expand [expanded]="selectedItemId !== null">
+                <div class="list-description" [ngStyle]="{'height': height + 'px'}">
+                    <tui-scrollbar>
+                        <span>{{ !!getDescription(selectedItemId) ? getDescription(selectedItemId) : "Описания нет" }}</span>
+                    </tui-scrollbar>
+                </div>
+            </tui-expand>
         </div>
     }
 </div>
