--- a/src/app/components/to-do-list/to-do-list.scss
+++ b/src/app/components/to-do-list/to-do-list.scss
@@ -6,24 +6,48 @@
     align-items: center;
 }
 
-.container{
+.container {
+    width: 400px;
     padding: 5px;
+    background-color: #874e8930;
     border: 2px solid #92fbff;
     border-radius: 10px;
+    transition: width 0.3s ease-in-out;
+
+    &-open {
+        width: 624px;
+    }
 }
 
 .header {
     height: 50px;
-    width: 400px;
     border-bottom: 1px solid #92fbff;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.list {
+    display: flex;
+    flex-direction: row;
+
+    &-body {
+        padding-right: 5px;
+    }
+
+    &-description {
+        width: 215px;
+        padding-left: 5px;
+        border-bottom: 1px solid #92fbff;
+        background-color: rgba(157, 255, 255, 0.250);
+    }
+}
+
 .body {
+    min-height: 53px;
+    max-height: 200px;
     width: 400px;
-    background-color: rgba(157, 255, 255, 0.281);
+    background-color: rgba(157, 255, 255, 0.250);
     border-bottom: 1px solid #92fbff;
     display: flex;
     align-items: center;
@@ -38,18 +62,26 @@ ul {
 
 .footer {
     width: 400px;
-    height: 45px;
     padding-top: 5px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
 }
 
 .input {
-    width: 250px;
+    width: 380px;
+    height: 45px;
+    margin-bottom: 5px;
+}
+
+.textarea {
+    width: 380px;
+    margin-bottom: 5px;
+    height: 90px;
 }
 
 .button {
     width: 100px;
-    height: 100%;
+    height: 40px;
 }
