--- a/src/app/components/to-do-list-item/to-do-list-item.scss
+++ b/src/app/components/to-do-list-item/to-do-list-item.scss
@@ -4,7 +4,7 @@
 }
 
 .item {
-    height: 30px;
+    height: 35px;
     margin: 5px 0;
     display: flex;
     align-items: center;
@@ -23,14 +23,18 @@
     }
 
     &-text {
-        width: calc(100% - 80px);
+        width: calc(100% - 85px);
         height: 100%;
         display: flex;
         align-items: center;
     }
 }
 
-.button-delete {
+.input {
+    width: 100%;
+}
+
+.button {
     width: 80px;
     height: 25px;
 }
