--- a/src/app/components/toasts/toasts.html
+++ b/src/app/components/toasts/toasts.html
@@ -1,5 +1,5 @@
 <div class="toast-container">
       @for (msg of messages$ | async; track $index) {
-        <div class="toast">{{ msg }}</div>
+        <span class="toast">{{ msg }}</span>
       }
 </div>
