--- a/src/app/components/to-do-list/to-do-list.scss
+++ b/src/app/components/to-do-list/to-do-list.scss
@@ -59,27 +59,12 @@ ul {
     width: 100%;
     margin-block: 5px;
     margin-right: 15px;
+    padding-left: 15px;
+    list-style-type: none;
 }
 
 .footer {
     width: 400px;
-    padding-top: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.input {
-    width: 380px;
-    height: 45px;
-    margin-bottom: 5px;
-}
-
-.textarea {
-    width: 380px;
-    margin-bottom: 5px;
-    height: 90px;
 }
 
 .edited {
@@ -93,7 +78,11 @@ ul {
     height: 100%;
 }
 
-.button {
-    width: 100px;
-    height: 40px;
+.filters {
+    border-top: 1px solid #92fbff;
+    background-color: rgba(157, 255, 255, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
 }
