--- a/src/app/components/to-do-create-item/to-do-create-item.html
+++ b/src/app/components/to-do-create-item/to-do-create-item.html
@@ -27,6 +27,6 @@
         type="submit"
         [class.disabled]="form.invalid"
     >
-        <span>Добавить</span>
+        Добавить
     </ui-button>
 </form>
