--- a/src/app/components/to-do-list-item/to-do-list-item.html
+++ b/src/app/components/to-do-list-item/to-do-list-item.html
@@ -22,7 +22,7 @@
             class="button button-delete"
             (outClickEmitter)="outDeleteEmitter()"
         >
-            <span>Удалить</span>
+            Удалить
         </ui-button>
     } @else {
         <div class="checkbox">
@@ -49,7 +49,7 @@
             class="button button-add"
             (outClickEmitter)="outSaveEmitter()"
         >
-            <span>Сохранить</span>
+            Сохранить
         </ui-button>
     }
 </div>
