--- a/src/app/components/to-do-list-item/to-do-list-item.scss
+++ b/src/app/components/to-do-list-item/to-do-list-item.scss
@@ -11,7 +11,12 @@
     justify-content: space-between;
     border-radius: 5px;
     padding: 0 5px;
-    border: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid rgb(46, 255, 255);
+    transition: background-color 0.2s, border 0.2s;
+    cursor: pointer;
 
     &:hover {
         background-color: rgba(46, 255, 255, 0.150);
@@ -19,11 +24,9 @@
 
     &:active {
         background-color: rgba(46, 255, 255, 0.350);
-        border: 1px solid rgb(46, 255, 255);
     }
 
     &-text {
-        width: calc(100% - 110px);
         height: 100%;
         display: flex;
         align-items: center;
@@ -35,7 +38,7 @@
 }
 
 .button {
-    width: 80px;
+    width: 25px;
     height: 25px;
 }
 
