--- a/src/app/components/toasts/toasts.scss
+++ b/src/app/components/toasts/toasts.scss
@@ -1,7 +1,7 @@
 .toast-container {
     position: fixed;
     top: 20px;
-    left: 20px;
+    right: 20px;
     width: 200px;
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     background: rgba(46, 255, 255, 0.150);
     padding: 10px 20px;
     font-weight: 600;
-    border: 1px solid rgb(46, 255, 255);
+    border: 2px solid #92fbff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     animation: fade-in 0.3s ease;
