--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+::view-transition-old(root) {
+  animation: fade‑out 300ms ease‑out forwards;
+}
+
+::view‑transition-new(root) {
+  animation: fade‑in 300ms ease‑in forwards;
+}
+
+@keyframes fade‑out {
+  to { opacity: 0; transform: translateX(-20px); }
+}
+@keyframes fade‑in {
+  from { opacity: 0; transform: translateX(20px); }
+  to { opacity: 1; transform: translateX(0); }
+}
