--- a/src/app/components/board/board.html
+++ b/src/app/components/board/board.html
@@ -59,7 +59,7 @@
   </div>
 </ng-template>
 
-<ng-template #template let-observer>
+<ng-template #template>
     <to-do-create-item />
 </ng-template>
 
